# ArenIA

./: .gitignore  README.md
Arenia-Website/: Thumbs.db  index.html
CDC/: .Cahier des charges FIL ROUGE.tex.swp
CDC/CDG/: AreniA_CDC.aux
CDG/: ArenIA_CDG.aux  ArenIA_CDG.tex  ArenIA_CDG.toc  codesnippets.aux
CRs/: CR01_27.tex
Graphisme/3D/Arene/: Obstacle_basic.mesh  Wall_basic.mesh
Graphisme/Textures/: Ground.tga  Thumbs.db
Idees_Graphisme/: DESSINS.md  README_dessin.md  Vanélopé.xcf
Idees_Graphisme/Arene/: Obstacle_basic.blend  Obstacle_basic.blend1  Obstacle_basic.mesh.xml  Wall_basic.blend  Wall_basic.blend1  Wall_basic.material  Wall_basic.mesh.xml  Wall_corner.blend  Wall_corner.blend1  Wall_corner.mesh  Wall_corner.mesh.xml
Prototypes/Amusement sur GameLoop/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  exec
Prototypes/Amusement sur GameLoop/src/: DummyGameState.cpp  DummyGameState.h  GameState.cpp  GameState.h  main.cpp
Prototypes/Amusement sur LUA/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  exec  script.lua
Prototypes/Amusement sur LUA/src/: LuaHandler.cpp  LuaHandler.h  ObjectWrapper.cpp  ObjectWrapper.h  main.cpp  objet.cpp  objet.h
Prototypes/Base Ogre/: Base Ogre.opensdf  Base Ogre.sln
Prototypes/Classes Basiques/: Ability.cpp  Ability.h  AbilityMissile.cpp  AbilityMissile.h  Gauge.cpp  Gauge.h  Missile.cpp  Missile.h  Robot.cpp  Robot.h  Stats.cpp  Stats.h  makefile  makefile~  testStats.cpp
Tools/LuaDoc/: gendoc.bat  gendoc.lua  template.html  test.C  test.C.html.final
(+464 files in other folders)
